--- a/OlymPOS.csproj
+++ b/OlymPOS.csproj
@@ -5,7 +5,7 @@
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net9.0-tizen</TargetFrameworks> -->
 		<OutputType>Exe</OutputType>
-		<RootNamespace>OlymPOSAndroid</RootNamespace>
+		<RootNamespace>OlymPOS</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -45,7 +45,7 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
+		
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -125,6 +125,7 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="11.1.0" />
 		<PackageReference Include="CommunityToolkit.Maui.Core" Version="11.1.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="Dapper" Version="2.1.66" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.2" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.40" />
@@ -132,13 +133,15 @@
   		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
 		<PackageReference Include="MySql.Data" Version="9.2.0" />
 		<PackageReference Include="MySqlConnector" Version="2.4.0" />
-		<PackageReference Include="Syncfusion.Licensing" Version="28.2.6" />
-		<PackageReference Include="Syncfusion.Maui.Buttons" Version="28.2.6" />
-		<PackageReference Include="Syncfusion.Maui.Core" Version="28.2.6" />
-		<PackageReference Include="Syncfusion.Maui.ListView" Version="28.2.6" />
-		<PackageReference Include="Syncfusion.Maui.Sliders" Version="28.2.6" />
-		<PackageReference Include="Syncfusion.Maui.TabView" Version="28.2.6" />
-		<PackageReference Include="Syncfusion.Maui.TreeView" Version="28.2.6" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+		<PackageReference Include="Syncfusion.Licensing" Version="28.2.7" />
+		<PackageReference Include="Syncfusion.Maui.Buttons" Version="28.2.7" />
+		<PackageReference Include="Syncfusion.Maui.Core" Version="28.2.7" />
+		<PackageReference Include="Syncfusion.Maui.Inputs" Version="28.2.7" />
+		<PackageReference Include="Syncfusion.Maui.ListView" Version="28.2.7" />
+		<PackageReference Include="Syncfusion.Maui.Sliders" Version="28.2.7" />
+		<PackageReference Include="Syncfusion.Maui.TabView" Version="28.2.7" />
+		<PackageReference Include="Syncfusion.Maui.TreeView" Version="28.2.7" />
 		
 	</ItemGroup>
 
@@ -152,9 +155,6 @@
 	  <MauiXaml Update="ExtrasOptionsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="FlyoutCategoriesView.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
 	  <MauiXaml Update="ItemsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -162,15 +162,6 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="NumOrderPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="OrderFlyOut.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="OrderIntake.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="OrderPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Orders.xaml">
@@ -197,12 +188,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Modules\" />
-	  <Folder Include="Services\Repositories\" />
-	  <Folder Include="ViewModels\" />
-	  <Folder Include="Views\NewFolder\" />
+	<Folder Include="Modules\" />
+	<Folder Include="Services\Repositories\" />
+	<Folder Include="Views\NewFolder\" />
 	</ItemGroup>
-
 	<ItemGroup>
 	  <Resource Include="addorder.png">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
